[package]
name = "codsworth_geometry"
authors = ["Tucker hawkinson <public@hawkinson.dev>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
description = ""
repository = "https://github.com/dtolnay/quote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
